<resources>
    <string name="app_name">Work Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="dash">-</string>
    <string name="value">Value</string>
    <string name="loading">Loading&#8230;</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="daysShort">d</string>
    <string name="hoursShort">h</string>
    <string name="minutesShort">m</string>
    <string name="secondsShort">s</string>
    <string name="lbl_delete_all">Delete all</string>
    <string name="lbl_do_nothing">Do nothing</string>
	<string name="dialog_title_error">Error</string>
    <string name="default_project_name">Default Project</string>
    <string name="default_project_comment">This is the default project, created when installing the application.</string>
    <string name="default_task_name">Default Task</string>
    <string name="default_task_comment">This is the default task, created when installing the application.</string>
    <string name="home_btn_timeregs">Registrations</string>
    <string name="home_btn_projects">Projects</string>
    <string name="home_btn_preferences">Preferences</string>
    <string name="home_btn_reporting">Reporting</string>
    <string name="home_btn_about">About</string>
    <string name="home_comp_start_stop_time_registration_no_ongoing">No ongoing time regstration!</string>
    <string name="btn_manage_projects_title">Manage Projects</string>
    <string name="msg_delete_project_confirmation">Do you want to delete this project?</string>
    <string name="lbl_empty_project_list">No projects available.</string>
    <string name="msg_delete_project_at_least_one_required">You cannot delete this project. At least one is required.</string>
    <string name="lbl_projects_menu_details">View details</string>
    <string name="lbl_projects_menu_delete">Delete project</string>
    <string name="lbl_projects_menu_mark_finished">Mark finished</string>
    <string name="lbl_projects_menu_mark_unfinished">Mark unfinished</string>
    <string name="msg_mark_project_finished_with_unfinished_tasks_confirmation">This project has unfinished tasks left. Are you sure you want to finish this project?</string>
    <string name="msg_mark_project_finished_not_possible_ongoing_tr">The project cannot be marked as finished as it\'s used in an ongoing time registration&#8230;</string>
    <string name="lbl_projects_menu_add">Add new project</string>
    <string name="lbl_projects_menu_edit">Edit project</string>
    <string name="lbl_projects_menu_copy">Copy project and tasks</string>
    <string name="lbl_add_project_title">Add Project</string>
    <string name="lbl_edit_project_title">Edit Project</string>
    <string name="lbl_add_project_name">Project-name:</string>
    <string name="lbl_add_project_comment">Comment:</string>
    <string name="lbl_project_name_not_unique">This name is already in use. Please choose another one.</string>
    <string name="lbl_project_name_required">The name of the project is a required field!</string>
    <string name="lbl_project_details_tasks">Tasks</string>
    <string name="lbl_project_details_no_comment">No comment entered for this project</string>
    <string name="lbl_project_details_total_time_spent">Total time spent:</string>
    <string name="lbl_project_details_punch_in_count">\"Punch In\" count:</string>
    <string name="msg_delete_task_confirmation">Do you want to delete this task?</string>
    <string name="msg_delete_task_and_linked_time_registrations_confirmation">Time registrations for this task have been found. Do you want to delete all those time registrations and the task or do nothing?</string>
    <string name="msg_delete_task_unavailable_still_in_use">The project cannot be deleted as it is still used in some tasks. Please remove the tasks first and try again.</string>
    <string name="msg_mark_task_finished_not_possible_ongoing_tr">The task cannot be marked as finished as it\'s used in an ongoing time registration&#8230;</string>
    <string name="lbl_tasks_menu_edit">Edit task</string>
    <string name="lbl_tasks_menu_move">Move task</string>
    <string name="lbl_tasks_menu_mark_unfinished">Mark unfinished</string>
    <string name="lbl_tasks_menu_mark_finished">Mark finished</string>
    <string name="lbl_tasks_menu_delete">Delete task</string>
    <string name="lbl_tasks_menu_add">Add new task</string>
    <string name="lbl_copy_project_title">Copy Project</string>
    <string name="lbl_copy_project_part_one_content">In order to copy a project you will have to provide a new, unique, name on the next screen. Pay attention because the project will be copied (with the new name) and together all of it\'s tasks. But time registrations for the project and tasks will not be copied!\n\nPress \'Next\' to continue with the copy.</string>
    <string name="lbl_copy_project_part_two_title">Set a project name</string>
    <string name="lbl_copy_project_part_two_copy_all_tasks_chekced">Copy all tasks</string>
    <string name="lbl_copy_project_part_two_copy_all_tasks_unchekced">Only copy unfinished tasks</string>
    <string name="lbl_copy_project_part_three_title">Summary</string>
    <string name="lbl_copy_project_part_three_summary_project_name">Name:</string>
    <string name="lbl_copy_project_part_three_summary_project_comment">Comment:</string>
    <string name="lbl_copy_project_part_three_summary_old_project">Old Project</string>
    <string name="lbl_copy_project_part_three_summary_new_project">New Project</string>
    <string name="lbl_copy_project_part_three_summary_number_of_tasks">%1$s task(s) will be copied</string>
    <string name="lbl_copy_project_cancel_dialog">Do you want to cancel?</string>
    <string name="msg_copy_project_cancel_dialog">Are you sure you want to cancel?</string>
    <string name="lbl_add_task_title">Add Task</string>
    <string name="lbl_edit_task_title">Edit Task</string>
    <string name="lbl_add_task_name">Task-name:</string>
    <string name="lbl_task_name_required">The name of the task is a required field!</string>
    <string name="lbl_add_task_project_name">Project:</string>
    <string name="lbl_move_task_title">Select project</string>
    <string name="lbl_registrations_title">Time Registrations</string>
    <string name="lbl_empty_registration_list">No time registrations available yet.</string>
    <string name="now">Until now&#8230;</string>
    <string name="lbl_registrations_load_more">Tap to load more&#8230;</string>
    <string name="msg_delete_registration_confirmation">Do you want to delete this time registration?</string>
    <string name="lbl_registrations_comment">Comment:</string>
    <string name="lbl_registrations_menu_title">Registration Options</string>
    <string name="lbl_registrations_menu_details">View details</string>
    <string name="lbl_registrations_menu_edit_start">Edit starting time</string>
    <string name="lbl_registrations_menu_edit_end">Edit end time</string>
    <string name="lbl_registrations_menu_split">Split</string>
    <string name="lbl_registrations_menu_edit_comment">Edit comment</string>
    <string name="lbl_registrations_menu_add_comment">Add comment</string>
    <string name="lbl_registrations_menu_edit_project_task">Edit project and task</string>
    <string name="lbl_registrations_menu_delete">Delete registration</string>
    <string name="lbl_registration_menu_restart">Restart registration</string>
    <string name="lbl_registration_details_title">Registration Details</string>
    <string name="lbl_registration_details_start">Start: </string>
    <string name="lbl_registration_details_end">End: </string>
    <string name="lbl_registration_details_duration">Duration: </string>
    <string name="lbl_registration_details_comment">Comment:</string>
    <string name="lbl_registration_details_project">Project: </string>
    <string name="lbl_registration_details_task">Task: </string>
    <string name="lbl_registration_edit_pick_date">Pick a new date</string>
    <string name="lbl_registration_edit_pick_time">Pick a new time</string>
    <string name="lbl_registration_edit_validation_error">Validation Error</string>
    <string name="lbl_registration_edit_validation_error_less_than_equal_to">The specified date/time needs to be before or equal to the limit. Press ok and correct your error. Limit is %1$s</string>
    <string name="lbl_registration_edit_validation_error_greater_than_equal_to">The specified date/time needs to be after or equal to the limit. Press ok and correct this error. Limit is %1$s</string>
    <string name="lbl_registration_edit_validation_error_less_than">The specified date/time needs to be before the limit. Press ok and correct this error. Limit is %1$s</string>
    <string name="lbl_registration_edit_validation_error_greater_than">The specified date/time needs to be after the limit. Press ok and correct your error. Limit is %1$s</string>
    <string name="lbl_registration_split_title">Split Time Registration</string>
    <string name="lbl_registration_split_cancel_dialog">Do you want to cancel?</string>
    <string name="msg_registration_split_cancel_dialog">Canceling will make you loose all your changes. Do you want to continue?</string>
    <string name="lbl_registration_split_part_one_title">Set end time - Part 1</string>
    <string name="lbl_registration_split_part_two_title">Set start time - Part 2</string>
    <string name="lbl_registration_split_part_three_title">Review Changes</string>
    <string name="lbl_registration_split_validation_greater_than">The specified date and time needs to be after the limit. Limit is %1$s</string>
    <string name="lbl_registration_split_validation_greater_than_equal_to">The specified date and time needs to be after or equal to the limit. Limit is %1$s</string>
    <string name="lbl_registration_split_validation_less_than">The specified date and time needs to be before the limit. Limit is %1$s</string>
    <string name="lbl_registration_split_validation_less_than_equal_to">The specified date and time needs to be before or equal to the limit. Limit is %1$s</string>
    <string name="pref_date_and_time_category_title">Date and Time</string>
    <string name="pref_widget_category_title">Widget</string>
    <string name="pref_widget_ask_for_task_selection_if_only_one_title">Ask for task if only one available</string>
    <string name="pref_widget_ask_for_task_selection_if_only_one_summary_on">If only one task is selectable, ask me to select a task when starting a time registration</string>
    <string name="pref_widget_ask_for_task_selection_if_only_one_summary_off">If only one task is selectable, do not ask me to select a task when starting a time registration but auto-select the only task found</string>
    <string name="pref_widget_ask_for_comment_title">Ask for comment?</string>
    <string name="pref_widget_ask_for_comment_summary_on">Ending a time registration will ask for a summary for the registration.</string>
    <string name="pref_widget_ask_for_comment_summary_off">Ending a time registration will not ask to enter a summary for the registation.</string>
    <string name="pref_widget_ask_for_finishing_task_title">Ask for finishing task?</string>
    <string name="pref_widget_ask_for_finishing_task_summary_on">Ending a time registration will ask if you want to finish the selected task.</string>
    <string name="pref_widget_ask_for_finishing_task_summary_off">Ending a time registration will not ask if you want to finish the selected task.</string>
    <string name="pref_stat_bar_notifs_category_title">Notifications</string>
    <string name="pref_backup_category_title">Backup and Restore</string>
    <string name="pref_time_registrations_category_title">Time Registrations</string>
</resources>